Fix CMakeLists `install` for header-only builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -179,6 +179,16 @@ if(NOT CMAKE_SKIP_INSTALL_RULES)
     )
 
     install(
+      DIRECTORY "${RED4EXT_VENDOR_DIR}/D3D12MemAlloc/include/"
+      DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
+    )
+
+    install(
+      DIRECTORY "${RED4EXT_VENDOR_DIR}/D3D12on7/include/"
+      DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
+    )
+
+    install(
       TARGETS RED4ext.SDK
       EXPORT ${RED4EXT_EXPORT_TARGETS}
       INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
